<resources>
    <string name="app_name">MAD Experiment 10</string>
    <string name="App_title">Student DB Application By B036</string>
    <string name="add">Add</string>
    <string name="enter_marks">Enter Marks</string>
    <string name="enter_name">Enter Name</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="view">View</string>
    <string name="enter_roll_no">Enter Roll No.</string>
    <string name="enter_roll_no2">Enter Roll No.</string>
    <string name="enter_name1">Enter Name</string>
    <string name="enter_marks1">Enter Marks</string>
    <string name="add1">Add</string>
    <string name="remove1">Remove</string>
    <string name="update1">Update</string>
    <string name="view1">View</string>
</resources>